fix for initial instructions

--- a/public/app/index/index.html
+++ b/public/app/index/index.html
@@ -13,7 +13,7 @@
 
 <ol class="list-unstyled">
     <li><code>git remote add upstream https://github.com/icfi-tech-crunch-munch/get-with-git.git</code></li>
-    <li><code>git pull upstream</code></li>
+    <li><code>git pull upstream master</code></li>
     <li><code>npm install</code></li>
     <li><code>bower install</code></li>
     <li><code>npm start</code></li>
