--- a/public/app/practice/step-5.html
+++ b/public/app/practice/step-5.html
@@ -9,7 +9,7 @@
 <ol class="list-unstyled">
     <li><code>git stash</code></li>
     <li><code>git branch hotfix</code></li>
-    <li><code>git branch checkout hotfix</code></li>
+    <li><code>git checkout hotfix</code></li>
 </ol>
 
 <p>Your changes are now in the stash stack.</p>
