--- a/public/app/practice/step-5.html
+++ b/public/app/practice/step-5.html
@@ -18,7 +18,7 @@
 
 <ol class="list-unstyled">
     <li><code>git add public/app/practice/final.html</code></li>
-    <li><code>git commit -m "removed unecessary th"</code></li>
+    <li><code>git commit -m "removed unnecessary th"</code></li>
 </ol>
 
 <p>You've just added the file to stage, and then committed it.</p>
