--- a/public/app/practice/step-6.html
+++ b/public/app/practice/step-6.html
@@ -4,7 +4,7 @@
 
 <p>Before committing you should always update your local branch with the remote repository.</p>
 
-<p><code>git pull upstream</code></p>
+<p><code>git pull upstream master</code></p>
 
 <p>Before committing you should always update your local branch with the remote repository.</p>
 
