--- a/public/app/commands/init.html
+++ b/public/app/commands/init.html
@@ -2,6 +2,6 @@
 
 <code>git init</code>
 
-<p>Creates .git directory and an initial commit object</p>
+<p>Creates .git directory. If there are existing files these will need to be staged and committed to be tracked.</p>
 
 <p><a href="http://git-scm.com/docs/git-init" class="btn btn-xs btn-default">More Info</a></p>
