--- a/public/app/commands/rm.html
+++ b/public/app/commands/rm.html
@@ -2,6 +2,6 @@
 
 <code>git rm [file or directory]</code>
 
-<p>Deletes file or directory to the destination. Automatically stages the change.</p>
+<p>Deletes file or directory. Automatically stages the change.</p>
 
 <p><a href="http://git-scm.com/docs/git-rm" class="btn btn-xs btn-default">More Info</a></p>
