--- a/public/app/commands/push.html
+++ b/public/app/commands/push.html
@@ -1,6 +1,6 @@
 <h2>Git Push</h2>
 
-<code>git push [optional: remote]</code>
+<code>git push [remote] [branch]</code>
 
 <p>Updates remote repository with local changes.</p>
 
