--- a/public/app/commands/fetch.html
+++ b/public/app/commands/fetch.html
@@ -1,6 +1,6 @@
 <h2>Git Fetch</h2>
 
-<code>git fetch [repository]</code>
+<code>git fetch [remote]</code>
 
 <p>Updates local .git directory with specified repository’s branches and history.</p>
 
