--- a/public/app/commands/add.html
+++ b/public/app/commands/add.html
@@ -6,6 +6,6 @@
 
 <code>git add .</code>
 
-<p>Stages all unstaged and modified files.</p>
+<p>Stages all untracked and modified files.</p>
 
 <p><a href="http://git-scm.com/docs/git-add" class="btn btn-xs btn-default">More Info</a></p>
