--- a/public/app/practice/step-1.html
+++ b/public/app/practice/step-1.html
@@ -4,7 +4,7 @@
 
 <code>git config --global user.name [name]</code>
 
-<h3>Set your user name</h3>
+<h3>Set your email</h3>
 
 <code>git config --global user.email [email]</code>
 
