--- a/public/app/practice/final.html
+++ b/public/app/practice/final.html
@@ -11,9 +11,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>Jeff Heinrichs</td>
-            <td>icf-jheinrichs</td>
-            <td>jeff.heinrichs@icfi.com</td>
+            <td>Vikram Yelanadu</td>
+            <td>vikramy</td>
+            <td>vikramyy@gmail.com</td>
         </tr>
     </tbody>
 </table>
